# gen0_gz_sim_ros2

./: .gitignore  README.md  can_setup.sh  commands.txt  frames.gv  heartbeat.py  linux_commands  movecommand_bck.py  movecommand_frw.py  movecommand_right_bck.py  rospackages.sh
Pedestrain_Trajectory-main/: LICENSE  README.md  download_data.sh  evaluate_model_original.py  evaluate_with_ROS.py  summary.md  training.md
catkin_ws/: frames.gv
docker/: docker-compose.yml
gen0_controller/gen0_controller/: CMakeLists.txt  package.xml
gen0_controller/gen0_controller/gen0_controller/: PIDcontroller_CTE.py  PIDcontroller_velocity.py  collision_checker.py  collision_visual.py  path_loader.py
gen0_controller/gen0_controller/launch/: gen0_controller.launch.xml
gen0_controller/gen0_controller/src/: PIDcontroller.py  PIDcontroller_CTE.py  localization_points.py  path_loader.py
gen0_controller/gen0_controller/stations/: station1.json  station2.json  station3.json  station4.json
gen0_hardware/: can_setup.sh  commands.txt
gen0_hw/: san_test1.yaml  san_test2.yaml
gen0_interface/: CMakeLists.txt  package.xml
gen0_lidars/: frames.gv  notes.txt
gen0_main/: setup.py
gen0_planner/: add_euclidean_distance.py  csv_to_json.py  station1.csv  station1.json  station11.json  station2.csv  station2.json  station22.json  velocities_allocator.py
gz_plugins/: ActorPose.cc  ActorPose.hh  CMakeLists.txt
rqt/: gen0_sim.perspective
testing_scripts/: EZ10_test_LMS.dbc  Keyboard_Movement.py  OdomEstimator.py  VehicleMovement.py  VehicleSpeedMeasurements.py  battery_status.py  odom.py  (+11 more)
(+492 files in other folders)
